# oc2-baremetal

./: .gitignore  Cargo.toml
.cargo/: config
src/: main.rs
