[package]
name = "oc2-baremetal"
version = "0.1.0"
edition = "2021"

[dependencies]
fdt = "0.1.3"
uart_16550 = "0.2.16"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
opensbi-rt = { git = "https://github.com/allie-signet/riscv-sbi-rt.git", branch = "heck" }
embedded-graphics = "0.7.1"
tinybmp = "0.3.1"
